Fix menu z-index issue

--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ body.dark{
   z-index:1000;
 }
 
+.nav-actions{
+  position:relative;
+  z-index: 1000;
+}
+
 body.dark .navbar{
   background:rgba(0,0,0,0.7);
 }
@@ -77,7 +82,7 @@ body.dark .navbar{
   object-fit:cover;
   object-position:center;
 
-  z-index:1;
+  z-index:0;
 }
 
 .hero-overlay{
